--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,11 @@ spring.devtools.livereload.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+#mail properties
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=vickypeddi9@gmail.com
+spring.mail.password=Vicky@123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
