--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=2001
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:file:D:/data/demodb
 spring.devtools.livereload.enabled=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 #oracle datasource properties
